Add CommentService backend
